@@ -1,8 +1,15 @@
+
+2008-04-24  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/cs2cs.c: Fix process() so it passes through extra text as the
+	docs claim.
+
 2008-03-15  Frank Warmerdam <warmerdam@pobox.com>
 
 	* rename INSTALL to INSTALL.TXT to avoid screwing up "make install"
 	* Rework win32 makefiles to support "make install", and better 
 	knowledge of grid shift files, 
+
 2008-01-18  IGNF  <didier.richard@ign.fr>
 
 	* PJ_eqc.c : Merged eqr and eqc after advise from Gerald. eqc is
